--- a/watr.html
+++ b/watr.html
@@ -1,13 +1,19 @@
-<head>
-  <script src="https://code.jquery.com/jquery-3.3.1.js"
-  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-  crossorigin="anonymous"></script>
+<html>
+  <head>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
 
-  <script src="https://raw.githubusercontent.com/jarek-t/watr/master/logic.js"></script>
+    <script src="https://raw.githubusercontent.com/jarek-t/watr/master/logic.js"></script>
 
-  <link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles.css">
+  </head>
 
-<body>
-
-</body>
+  <body>
+    <div id="sip-container">
+      <div class="sip">
+      </div>
+    <div>
+  </body>
+</html>
