--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <html>
   <head>
-    <script src="https://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
-
-    <script src="https://raw.githubusercontent.com/jarek-t/watr/master/logic.js"></script>
+    <script src="jquery.js" type="text/javascript"></script>
+    <script src="logic.js" type="text/javascript"></script>
 
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
@@ -12,8 +9,7 @@
 
   <body>
     <div id="sip-container">
-      <div class="sip">
-      </div>
+
     <div>
   </body>
 </html>
