Improved flow, added functionality

--- a/index.html
+++ b/index.html
@@ -30,9 +30,16 @@
     </div>
 
     <div id="watr-wrapper">
+
+      <h1 id="time"></h1>
+
+
       <div id="glasses">
 
       </div>
+
+      <button type="button" id="new-watr">Watr</button>
+      <button type="button" id="reset">Reset</button>
     <div>
   </body>
 </html>
